# models

./: .gitignore  README.md  TODO_IMAGE_GEN.md  TTS_RESEARCH.md
.github/workflows/: higgs-audio-native.yml  higgs-audio-v3.yml  higgs-audio-vllm.yml  image-gen.yml  lip-sync-v2.yml  lip-sync.yml  upscaler.yml
higgs-audio/: Dockerfile.simple  README-FORK.md  test-concurrent.mjs  test-single.mjs  test-speech-api.mjs
higgs-audio-poc/: README.md  monitor_gpu.sh  pyproject.toml  requirements-server.txt  server.py  setup.sh  start.sh
higgs-audio-poc/native/: Dockerfile  README.md  server.py  start.sh  test-requests.http
higgs-audio-poc/runpod/: README.md  benchmark.py  build-vllm.sh  server.py  start-vllm.sh
higgs-audio-poc/vllm/: README.md  server.py  server_direct.py  stop-vllm.sh
higgs-audio-poc/vllm-v2/: Dockerfile  README.md  benchmark.py  custom_voices.json  higgs_audio.py  monitor_gpu.sh  protocol_patched.py  serving_audio_patched.py  setup.sh  start-vllm.sh  test-requests.http
higgs-audio-poc/vllm-v2/voice_presets/: .gitkeep
higgs-audio-poc/vllm-v3/: Dockerfile  README.md  requirements.txt  server.py  server_integrated.py  test-requests.http
higgs-audio/.github/workflows/: build-and-push.yml
image-gen/: .gitignore  Dockerfile  Makefile  README-VASTAI.md  README.md  pyproject.toml
image-gen/imagegen/: __init__.py
image-gen/imagegen/server/: __init__.py  flux_pipeline.py  main.py  schemas.py  upscaler.py
image-gen/scripts/: benchmark_vram.py  test_4b_bf16.py  test_api.py  test_fp8.py
image-gen/tests/: conftest.py  test_schemas.py
lip-sync/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test-requests.http
lip-sync-v2/: .gitignore  Dockerfile  Makefile  README-VASTAI.md  SCALABILITY.md  pyproject.toml  test-requests.http
lip-sync-v2/lipsync/: __init__.py  enhancer.py  frame_extractor.py  loop_handler.py  tracker.py  wav2lip.py  wav2lip_model.py
lip-sync-v2/lipsync/server/: __init__.py  insightface_detector.py  main.py  schemas.py
lip-sync-v2/patches/: wav2lip_audio.py  wav2lip_inference.py
lip-sync-v2/scripts/: analyze-metrics.py  download_models.py  monitor-hardware.sh  test-cpu-validation.py  validate-imports.py
lip-sync-v2/tests/: __init__.py  test_frame_extractor.py  test_schemas.py  test_segment_builder.py  test_tracker.py
lip-sync/.github/workflows/: ci.yml
lip-sync/lipsync/: __init__.py  alignment.py  cache.py  codeformer.py  compositor.py  liveportrait.py  musetalk.py  pipeline.py  utils.py
lip-sync/lipsync/archs/: __init__.py  codeformer_arch.py  vqgan_arch.py
lip-sync/lipsync/server/: __init__.py  main.py  qwen_client.py  schemas.py  segment_builder.py
lip-sync/scripts/: download_models.py  example-config.json  test-api.mjs  test-cpu-validation.py  validate-imports.py
lip-sync/tests/: __init__.py  conftest.py  test_api.py  test_schemas.py
upscaler/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
upscaler/tests/: __init__.py  conftest.py  test_schemas.py  test_video.py
upscaler/upscaler/: __init__.py  deflicker.py  realesrgan.py  video.py
upscaler/upscaler/server/: __init__.py  main.py  schemas.py
