[project]
name = "imagegen"
version = "0.1.0"
description = "FLUX.2 klein image generation service"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Scenema AI", email = "dev@scenema.ai"}
]
keywords = ["image-generation", "flux", "diffusion", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.5.0",  # Required for TorchAO FP8 quantization
    "torchvision>=0.15.0",
    "torchao>=0.8.0",  # FP8 quantization support
    "diffusers @ git+https://github.com/huggingface/diffusers.git",  # Need dev for Flux2KleinPipeline
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.0.0",
    "huggingface-hub>=0.23.0,<1.0",  # diffusers compatibility
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    # Upscaling
    "realesrgan>=0.3.0",  # Real-ESRGAN upscaler
    "basicsr>=1.4.2",  # Required by realesrgan
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["imagegen"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # Line too long - handled by formatter
    "E402",  # Module level import not at top of file
    "F401",  # Unused import - many false positives during dev
    "F541",  # f-string without placeholders
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
