[project]
name = "lipsync"
version = "0.1.0"
description = "Multi-face lip-sync pipeline using MuseTalk, LivePortrait, and CodeFormer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Scenema AI", email = "dev@scenema.ai"}
]
keywords = ["lip-sync", "video", "ai", "musetalk", "liveportrait"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "onnxruntime-gpu>=1.16.0",
    "insightface>=0.7.3",
    "huggingface-hub>=0.19.0",
    "safetensors>=0.4.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "diffusers>=0.24.0",
    "basicsr>=1.4.2",
    "facexlib>=0.3.0",
    "gfpgan>=1.3.8",
    "ffmpeg-python>=0.2.0",
    "av>=10.0.0",
    "pillow>=10.0.0",
    "scipy>=1.11.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    # MuseTalk dependencies
    "openai-whisper>=20231117",
    "einops>=0.7.0",
    # LivePortrait dependencies
    "pyyaml>=6.0.0",
    "dlib>=19.24.0",
    "tyro>=0.7.0",
    # Image processing
    "scikit-image>=0.21.0",
    # Utilities
    "tqdm>=4.66.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lipsync", "server"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # Line too long - handled by formatter
    "E402",  # Module level import not at top of file
    "F401",  # Unused import - many false positives during dev
    "F541",  # f-string without placeholders
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cpu: marks tests that run full pipeline on CPU",
]

