[project]
name = "video-upscaler"
version = "0.1.0"
description = "Video upscaling service using Real-ESRGAN with optional temporal deflicker"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Scenema AI", email = "dev@scenema.ai"}
]
keywords = ["video", "upscaling", "real-esrgan", "super-resolution", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # PyTorch (CUDA version installed separately in Dockerfile)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    # Real-ESRGAN
    "realesrgan>=0.3.0",
    "basicsr>=1.4.2",
    # Image/Video processing
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "av>=10.0.0",
    "ffmpeg-python>=0.2.0",
    # Server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    # Utilities
    "tqdm>=4.66.0",
    "huggingface-hub>=0.19.0",
]

[project.optional-dependencies]
deflicker = [
    # All-In-One-Deflicker dependencies
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["upscaler"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # Line too long - handled by formatter
    "E402",  # Module level import not at top of file
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
